66 configure commons lang to get instrumented by spoon (#67)
* Add instrumentation pom for commons-lang with Jackson plugin

* Update instrumented code to be compatible with JDK8

* Update config-spring-boot.yml

* Update README.md

* Update HttpClientServiceTest.java